# 3d_tel_bot_my

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_chat_messages.py
deploy/espocrm/: .env.example  docker-compose.yml
deploy/nginx/: default.conf
deploy/scripts/: backup_db.sh  health_recover.sh  install_systemd.sh  quick_deploy.sh  restart_services.sh  set_webhook.sh
deploy/systemd/: telegram-shop-health.service  telegram-shop-health.timer  telegram-shop-stack.service
scripts/: bootstrap_venv.ps1  bootstrap_venv.sh  package_for_server.sh
src/app/: config.py  logging.py  main.py
src/app/api/: middleware.py  routes.py  webhook.py
src/app/bot/: antispam.py  deps.py  dispatcher.py  keyboards.py  states.py
src/app/bot/handlers/: admin.py  start.py  support.py  webapp.py
src/app/db/: models.py  session.py
src/app/repositories/: chat.py  crm.py  orders.py  support.py  users.py
src/app/schemas/: order.py  telegram.py
src/app/services/: attribution_service.py  crm_service.py  order_service.py  support_service.py
src/app/services/integrations/: espocrm.py  (+1 more)
src/app/utils/: deeplink.py
tests/integration/: test_webapp_contract.py
tests/unit/: test_crm_mapper.py  test_deeplink.py  test_order_schema.py
webapp/: index.html  package.json  vite.config.js
webapp/src/: App.jsx  styles.css
