[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ecommerce-bot"
version = "0.1.0"
description = "Telegram ecommerce bot with Web App storefront, support bridge, and CRM export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-json-logger>=2.0.7,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "ruff>=0.5.7,<1.0.0",
  "black>=24.8.0,<25.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
